# mc-sim-editor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  xxx.osgb
.devcontainer/: devcontainer.json
example/: example.mcedit  example.pro  pyramid.osgt  shaft.osgt
src/: CMakeLists.txt  Result.h  defs.h  main.cpp  mc-sim-editor.pro  mc-sim-editor.qrc
src/cgi/: Builder.cpp  Builder.h  CGI.cpp  CGI.h  CMakeLists.txt  Colors.cpp  Colors.h  Component.cpp  Component.h  Data.h  Geometry.cpp  Geometry.h  Grid.cpp  Grid.h  HUD.cpp  HUD.h  Manager.cpp  Manager.h  ManipulatorOrbit.cpp  ManipulatorOrbit.h  ManipulatorTrack.cpp  ManipulatorTrack.h  Model.cpp  Model.h  Models.cpp  Models.h  Textures.cpp  Textures.h  ViewGizmo.cpp  ViewGizmo.h  cgi.pri
src/gui/: CMakeLists.txt  FormAnim.cpp  FormAnim.h  FormAnim.ui  FormComp.cpp  FormComp.h  FormComp.ui  FormScene.cpp  FormScene.h  FormScene.ui  GraphicsWindowQt.cpp  GraphicsWindowQt.h  KeyMap.cpp  KeyMap.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MoveAction.cpp  MoveAction.h  RecentAction.cpp  RecentAction.h  TreeScene.cpp  TreeScene.h  Utils.cpp  Utils.h  WidgetCGI.cpp  WidgetCGI.h  WidgetOSG.cpp  WidgetOSG.h  gui.pri
src/gui/html/: about.html
src/pro/: Animated.cpp  Animated.h  Animation.cpp  Animation.h  Assembly.cpp  Assembly.h  Box.cpp  Box.h  CMakeLists.txt  Component.cpp  Component.h  Components.cpp  Components.h  FLOLS.cpp  FLOLS.h  File.cpp  File.h  Group.cpp  Group.h  Keyframe.cpp  Keyframe.h  LOD.cpp  LOD.h  PAT.cpp  PAT.h  Playback.cpp  Playback.h  Project.cpp  Project.h  Rotor.cpp  Rotor.h  Switch.cpp  Switch.h  Trans.cpp  Trans.h  pro.pri
src/sim/: Simulation.cpp  sim.pri
utils/: clean.py  generate_coverage-report.py  misc.py
